--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@ type filter=lfs diff=lfs merge=lfs -text
 or filter=lfs diff=lfs merge=lfs -text
 the filter=lfs diff=lfs merge=lfs -text
 *.csv.gz filter=lfs diff=lfs merge=lfs -text
+*.rda
